--- a/acfun.scss
+++ b/acfun.scss
@@ -386,6 +386,7 @@ header {
                 }
                 #history-part {
                     box-sizing: border-box;
+                    display: none;
                     width: 100%;
                     .history-head {
                         padding-bottom: 8px;
@@ -1031,6 +1032,14 @@ header {
         width: 480px;
         height: 84px;
     }
+}
+
+#go-top {
+    position: fixed;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.9);
+    width: 50px;
+    height: 50px;
 }
 
 footer {
