--- a/acfun.scss
+++ b/acfun.scss
@@ -586,6 +586,10 @@ header {
                     left: 10px;
                     color: #fff;
                 }
+                img {
+                    width: 508px;
+                    height: 260px;
+                }
             }
         }
         .bullet {
